// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot when no text is provided 1`] = `
<div
  className="h-auto p-2 bg-gray-900 pl-4"
>
  <h1
    className="font-bold text-white text-xl"
  >
    ConversionKit
  </h1>
</div>
`;

exports[`matches snapshot when text is provided 1`] = `
<div
  className="h-auto p-2 bg-gray-900 pl-4"
>
  <h1
    className="font-bold text-white text-xl"
  >
    hey
  </h1>
</div>
`;
